2018-10-13 (0.12.14)
	COMMON: fix about page logo

2018-10-09 (0.12.14)
	COMMON: fix crash when passing zero as format argument to DATEFMT

2018-09-30 (0.12.14)
	COMMON: fix broken implementation to avoid appending multiple kwTYPE_EOCs (or kwTYPE_LINE)

2018-09-23 (0.12.14)
	COMMON: fix error message when command "LINE INPUT" attempts to read a non open file

2018-09-23 (0.12.14)
	COMMON: fix crash when attempting to load an image from a failed network connection

2018-08-08 (0.12.13)
	SDL: fix incorrect file loading with ALT+1-9 command

2018-08-08 (0.12.13)
	COMMON: fix problem with SEQ command

2018-08-08 (0.12.13)
	ANDROID: remove hardcoded references to "/sdcard" path

2018-07-15 (0.12.13)
	ANDROID: migrate build from eclispe to android studio
	ANDROID: fix issue #66

2018-07-15 (0.12.13)
	SDL: Added window.setSize function

2018-07-07 (0.12.13)
	SDL: Added solarized color schemes
	F11 key in editor now toggles fullscreen

2018-07-07 (0.12.13)
	SDL: Implemented live edit mode

2018-03-08 (0.12.13)
	COMMON: Fix trailing spaces with LOCAL command when terminated with comma

2018-03-08 (0.12.13)
	COMMON: Fix TLOAD input error handling

2018-02-03 (0.12.13)
	COMMON: UNITPATH replaced with SBASICPATH which also works for modules

2018-02-03 (0.12.13)
	COMMON: modules refresh

2018-02-03 (0.12.12)
	COMMON: restore 6d array handling
	COMMON: increase default stack size

2018-01-13 (0.12.12)
	Fix osx crash

2017-11-28 (0.12.11)
	Fix img.save(dat) to build correct indexes
	Fix ESCm implementation bug
	Implements ESC<n ESC>n back screen handlers

2017-11-28 (0.12.10)
	Released 82f865d61a6eba1c017b8a58e1c892f1b7d6a0c0

2017-11-28 (0.12.10)
	COMMON: owner strings

2017-11-28 (0.12.10)
	COMMON: Fix some coverty warnings

2017-11-17 (0.12.10)
	SDL: Fix debugger display issue

2017-11-08 (0.12.10)
	UI: Added ALT+= command
	UI: Update ALT+. to work with error handling

2017-11-04 (0.12.10)
	COMMON: update png and editor libs
	UI: save and restore export settings