@@ -17,7 +17,7 @@
 #endif
 
 #define DEFAULT_FOREGROUND 0xa1a1a1
-#define DEFAULT_BACKGROUND 0
+#define DEFAULT_BACKGROUND 0x121212
 #define HANDLE_SCREEN_BUFFER HANDLE_SCREEN
 #define USER_MESSAGE_EXIT 1000
 
