@@ -1,3 +1,8 @@
+2018-10-20 (0.12.14)
+	UI: fix navigation when network access down then available
+	UI: changed display of "BLACK" to be a slightly ligher onyx colour.
+	ANDROID: update help tip in scratch window
+
 2018-10-13 (0.12.14)
 	COMMON: fix about page logo
 
